; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_sfq.c_sfq_find_tcf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_sfq.c_sfq_find_tcf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto = type { i32 }
%struct.Qdisc = type { i32 }
%struct.sfq_sched_data = type { %struct.tcf_proto* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tcf_proto** (%struct.Qdisc*, i64)* @sfq_find_tcf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tcf_proto** @sfq_find_tcf(%struct.Qdisc* %0, i64 %1) #0 {
  %3 = alloca %struct.tcf_proto**, align 8
  %4 = alloca %struct.Qdisc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.sfq_sched_data*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.Qdisc*, %struct.Qdisc** %4, align 8
  %8 = call %struct.sfq_sched_data* @qdisc_priv(%struct.Qdisc* %7)
  store %struct.sfq_sched_data* %8, %struct.sfq_sched_data** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.tcf_proto** null, %struct.tcf_proto*** %3, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load %struct.sfq_sched_data*, %struct.sfq_sched_data** %6, align 8
  %14 = getelementptr inbounds %struct.sfq_sched_data, %struct.sfq_sched_data* %13, i32 0, i32 0
  store %struct.tcf_proto** %14, %struct.tcf_proto*** %3, align 8
  br label %15

15:                                               ; preds = %12, %11
  %16 = load %struct.tcf_proto**, %struct.tcf_proto*** %3, align 8
  ret %struct.tcf_proto** %16
}

declare dso_local %struct.sfq_sched_data* @qdisc_priv(%struct.Qdisc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
